@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 ...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
 ...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
 ..F....... [ZBX-6669] fixed use of current host as filter when selecting items for graph forms and trigger forms (gcalenko)
@@ -541,6 +542,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 ...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
 ...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
 ..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
@@ -2327,6 +2329,7 @@ Changes for 2.2.21rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.20
